@@ -6,6 +6,6 @@
 #endif /* _MSC_VER > 1000 */
 
 int xc_cacher_startup_module();
-int xc_cacher_disable();
+void xc_cacher_disable();
 
 #endif /* XC_CACHER_H_1CADCD7E46ABC70014D0766CE97B9741 */
